# keying-ollama-flex

./: README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/: README.md  async_chat.py  async_tools_call.py  basic_chat.py  embed_vectors.py  generate_completion.py  history_cli.py  model_admin.py  multimodal_chat.py  recipes_showcase.py  session_chat.py  stream_generate_events.py  structured_output.py  thinking_logprobs.py  tools_call.py  web_search_fetch.py
src/ollama_flex/: __init__.py  client.py  config.py  errors.py  recipes.py  session.py  tools.py  types.py
src/ollama_flex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ollama_flex/_internal/: __init__.py  extractors.py  history.py  messages.py  streaming.py
tests/: test_client_tools_loop.py  test_internal_helpers.py  test_recipes.py  test_structured_retry.py  test_tools.py
